--- a/Makefile.repo
+++ b/Makefile.repo
@@ -20,6 +20,7 @@ deps: $(DEP-MAKEFILES)
 	#
 %.evl: %.miz
 	envget $*.miz;
+xml: $(patsubst %, %.xml, $(MMLLAR))
 %.xml: %.miz %-dep
 	makeenv $*.miz && verifier -q -l $*.miz
 
