mml.lar defined here

--- a/Makefile-depsrepo
+++ b/Makefile-depsrepo
@@ -1,4 +1,5 @@
 # MMLLAR, available in the environment, is the list of articles in the MML
+MMLLAR=$(shell cat $(MIZFILES)/mml.lar)
 DEP-MAKEFILES = $(patsubst %, %.dep, $(MMLLAR))
 MIZ = $(patsubst %, %.miz, $(MMLLAR))
 
