--- a/Makefile-depsrepo
+++ b/Makefile-depsrepo
@@ -13,12 +13,4 @@ deps: $(DEP-MAKEFILES)
 	envget $*.miz;
 
 %.dep: %.evl
-	xsltproc --output $*.dep \
-		$(XSL4MIZAR)/evl2dep.xsl $*.evl;
-	# the output of makefile-ize-evl.xsl, when applied to .evl
-	# file, should look like this:
-	#
-	# funct_1-prel: xboole_1-prel xboole_0-prel
-	# 	miz2prel funct_1-prel;
-	#	touch funct_1-prel;
-	#
+	xsltproc --output $*.dep $(XSL4MIZAR)/evl2dep.xsl $*.evl;
