--- a/Makefile-depsrepo
+++ b/Makefile-depsrepo
@@ -7,6 +7,8 @@ MIZ = $(patsubst %, %.miz, $(MMLLAR))
 .PHONY: deps
 .PHONY: $(patsubst %, %-dep, $(MMLLAR))
 
+.SECONDARY: $(patsubst %, %.evl, $(MMLLAR))
+
 deps: $(DEP-MAKEFILES)
 
 %.evl: %.miz
