--- a/Makefile.repo
+++ b/Makefile.repo
@@ -28,6 +28,7 @@ prels: $(patsubst %, %-prel, $(MMLLAR))
 			rm -f "mml/$*.$$ext"; \
 		fi; \
 	done
+	touch mml/$*-prel
 	mv mml/$*.xml mml/$*.xmlexp
 
 # HIDDEN is a special case
@@ -39,7 +40,7 @@ absrefs: $(patsubst %, %-absrefs.xml, $(MMLLAR))
 %-absrefs.xml: %.xmlvrf
 	xsltproc --param explainbyfrom  0 --output mml/$*-absrefs.xml xsl/addabsrefs.xsl mml/$*.xmlvrf;
 
-html: $(patsubst %, %.html, $(MMLLAR))
+htmls: $(patsubst %, %.html, $(MMLLAR))
 
 %.html: %-absrefs.xml
 	xsltproc --param default_target \'_self\'  --param linking \'l\' --param mizhtml \'\' --param selfext \'html\'  --param titles 1 --param colored 1  --param proof_links 1 --param ajax_proofs 1 --param ajax_proof_dir \'proofs\' --output html/$*.html xsl/miz.xsl mml/$*-absrefs.xml;
