--- a/Makefile-depsrepo
+++ b/Makefile-depsrepo
@@ -9,14 +9,14 @@ MIZ = $(patsubst %, %.miz, $(MMLLAR))
 #.PHONY: deps
 #.PHONY: $(patsubst %, %-dep, $(MMLLAR))
 
-.SECONDARY: $(patsubst %, %.evl, $(MMLLAR))
+.SECONDARY: $(patsubst %, %.evl, $(MMLLAR)) # don't auto-delete intermediate .dep files
 
 deps: $(DEP-MAKEFILES)
 evls: $(EVL-FILES)
 
 %.evl: %.miz
-	envget $*.miz; echo $$MIZFILES
+	envget $*.miz > /dev/null 2> /dev/null;
 
 %.dep: %.evl
-	xsltproc ../xsl/evl2dep.xsl $*.evl | \
-	perl -e '%h=(); $$_=<>; chop; m/(.*):(.*)/; ($$k,$$l)=($$1,$$2); @aa=split(/\ +/,$$l); @h{@aa} = (); print "$$k: "; print join(" ", keys %h); print "\n\ttouch mml/$*-dep"' > $*.dep
+	xsltproc ../xsl/evl2dep.xsl $*.evl | duplicates.pl > $*.dep;
+	echo "\ttouch $*-dep" >> $*.dep
