2 line killer; Not sure about the scary .PHONY targets: the only advantage of makefile over the setup script is that it can be run not just on the beginning, but economically for various stages (e.g. commiting new library version to "stable"). But the .PHONIES will kill any work-saving as we have seen before.
MAKEJOBS should be read from the environment.
The REPO-compiled is missing - not good, this is our cache of a cleanly
compiling state.
Not sure about the frontend permissions; in the backend, we need a
full user for the various ops, and we should keep the master repo at
mizarw now - that's in our paper.
The "html" target looks like a repetition of the Makefile.repo targets.

--- a/Makefile.install
+++ b/Makefile.install
@@ -28,11 +28,9 @@ repo: repo-miz repo-prel repo-data repo-bin repo-xsl repo-perl repo-makefiles re
 
 repo-miz:
 	mkdir -p $(REPO)/mml	
-	for article in $(INITIAL_SEGMENT); do \
+	for article in hidden tarski $(INITIAL_SEGMENT); do \
 	  install --preserve-timestamps --mode=644 $(MIZFILES)/mml/$$article.miz $(REPO)/mml; \
 	done
-	install --preserve-timestamps --mode=644 $(MIZFILES)/mml/hidden.miz $(REPO)/mml
-	install --preserve-timestamps --mode=644 $(MIZFILES)/mml/tarski.miz $(REPO)/mml
 
 repo-prel: # Special prel files: those for hidden, and all requirements (.dre) files
 	mkdir -p $(REPO)/prel
